# sj_Trading

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml  requirements.txt
adapter/: adapter_config.json
experiment/: args.yaml  metrics.train.jsonl
experiment/tb/: events.out.tfevents.1749969289.ttsai-System-Product-Name.102775.0.train  events.out.tfevents.1749969290.ttsai-System-Product-Name.102775.1.eval
experiment/wandb/: latest-run
experiment/wandb/run-20250615_143449-dlwlfat1/: run-dlwlfat1.wandb
experiment/wandb/run-20250615_143449-dlwlfat1/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
keep_awake/: keep_awake.py  logrotate.conf  start.sh  termination.sh
merge/: config.json  model.safetensors.index.json
src/sj_trading/: __init__.py  account.py  testing_flow.py  trader.py  trader_long_term.py  trading_notebook.ipynb  trading_pipeline.py
src/sj_trading/.ipynb_checkpoints/: testing_flow-checkpoint.py  trader-checkpoint.py  trading_notebook-checkpoint.ipynb
src/sj_trading/agent/: base_model.ipynb  fine_tuning_pipeline.ipynb  finetune_data.ipynb  finetune_model.ipynb  langchain.ipynb
