[project]
name = "sj-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "YulMitz", email = "yulmitz753220@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "shioaji>=1.2.5",
]

[project.scripts]
sj-trading = "sj_trading:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
