[project]
name = "sj-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "YulMitz", email = "yulmitz753220@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "shioaji>=1.2.5",
]

[project.scripts]
main = "sj_trading:main"
test_ordering = "sj_trading.testing_flow:testing_stock_ordering"
test_market_data = "sj_trading.testing_flow:test_market_data"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
